--- a/Api/package.json
+++ b/Api/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.0",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5"
   },
