--- a/Client/package.json
+++ b/Client/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.0.0",
     "axios": "^1.1.3",
+    "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
