--- a/Api/package.json
+++ b/Api/package.json
@@ -27,7 +27,10 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.0",
     "pg": "^8.5.1",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "uuid": "^9.0.0",
+    "uuid-v4": "^0.1.0",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "chai": "^4.2.0",
