--- a/Api/package.json
+++ b/Api/package.json
@@ -25,6 +25,7 @@
     "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^9.0.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.0",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5",
