--- a/Api/package.json
+++ b/Api/package.json
@@ -27,6 +27,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.0",
+    "path": "^0.12.7",
     "pg": "^8.5.1",
     "sequelize": "^6.3.5",
     "uuid": "^9.0.0",
