--- a/Client/package.json
+++ b/Client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.0.0",
     "axios": "^1.1.3",
+    "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
