--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@auth0/auth0-react": "^2.0.0",
+    "mercadopago": "^1.5.14",
     "react-google-login": "^5.2.2"
   }
 }
