--- a/Api/package.json
+++ b/Api/package.json
@@ -25,8 +25,7 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.0",
     "pg": "^8.5.1",
-    "sequelize": "^6.3.5",
-    "mercadopago": "^1.5.14"
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "chai": "^4.2.0",
