--- a/Client/package.json
+++ b/Client/package.json
@@ -24,8 +24,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
     "swiper": "^8.4.6",
-    "web-vitals": "^2.1.4",
-    "mercadopago": "^1.5.14"
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
